[vsp] Fix button alignment (#2299)

--- a/app/style/StakePool.less
+++ b/app/style/StakePool.less
@@ -53,7 +53,15 @@ textarea.stakepool-content-nest-content-settings {
 
 .stakepool-hide-config {
   float: right;
-  margin-top: 10px;
+  background-color: initial;
+  box-shadow: initial;
+  color: var(--title-text-and-button-background);
+  font-weight: 600;
+  padding: 18px 30px;
+  &:hover {
+    background-color: initial;
+    color: var(--title-text-and-button-background-hovered);
+  }
 }
 
 .stakepool-add-title {
@@ -109,7 +117,9 @@ textarea.stakepool-content-nest-content-settings {
 .stakepool-add-toolbar {
   text-align: right;
   margin-top: 20px;
-  grid-column: 2;  
+  grid-column: 2; 
+  display: flex;
+  flex-direction: row-reverse; 
 }
 
 .stakepool-link-button-container{
@@ -201,7 +211,7 @@ textarea.stakepool-content-nest-content-settings {
   }
   .stakepool-add-toolbar {
     grid-column: 1;
-    text-align: center; 
+    justify-content: center;
   }
   .stakepool-add-area-left{
     padding-right: 20px;
